--- a/ProjetoIMC/imc.html
+++ b/ProjetoIMC/imc.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="estilo.css">
     <title>IMC</title>
 
 
@@ -10,12 +11,12 @@
 <body>
     <form name="imcForm" id="imcForm" action="#">
         <p>
-            Altura<br>
+            <h1>Altura</h1>
             <input type="text" id="altura" name="altura">
         </p>
 
         <p>
-            Peso<br>
+            <h1>Peso</h1>
             <input type="text" id="peso" name="peso">
         </p>
         <p>
