--- a/DeclaracaodeVariaveis/aula1.html
+++ b/DeclaracaodeVariaveis/aula1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="estilo.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Declaração de Variaveis</title>
@@ -9,10 +10,10 @@
 </head>
 <body>
     <h1>Dados dos alunos da Etec</h1>
-    <script>
+    <script>   
        document.write('Nome:', nome, "<br>")
        document.write('Idade:', idade, "<br>")
-       document.write('Curso:', curso, "<br>")
+       document.write('Curso:', curso, "<br>") 
     </script>
 </body>
 </html>
