--- a/Funcoes/funcoes.html
+++ b/Funcoes/funcoes.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="estilo.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funções</title>
     <script src="funcoes.js"></script>
@@ -11,8 +12,8 @@
     <script>
         dadosacesso()
         saque (prompt("Quanto você deseja sacar?"))
-        document.write("Bem vindo, saque realizado", saldo)
+       document.write("", saldo)
     </script>
-    <h2>Bem vindo, saque realizado</h2>
+    <h2>Olá, saque realizado</h2>
 </body>
 </html>
