--- a/IW/exemploJ.html
+++ b/IW/exemploJ.html
@@ -116,6 +116,7 @@
           <h2>Sobre</h2>
           <p>Jquery</p>
         </div>
+        <img src="assets/img/Jquery.JPG" alt="">
         <div class="row content" data-aos="fade-up">
           <div class="col-lg-6">
             <p>
